Remove unused ESLint and NYC configuration files; update Twilio and Nodemon package versions; add forceRepopulate option to Mongoose populate options.
