# src/routes/admin.routes.js
@@ -5,6 +5,7 @@ import {
   deletePuja,
   getPujas,
   searchPuja,
+  getSpecificPuja,
 } from "../controllers/admin.controller.js";
 import { upload } from "../middlewares/multer.middleware.js";
 import verifyJWT from "../middlewares/auth.middleware.js";
@@ -18,5 +19,6 @@ router.patch("/editPuja/:id", upload.single("pujaImage"), editPuja);
 router.get("/getPujas", getPujas);
 router.delete("/deletePuja/:id", deletePuja);
 router.get("/searchPuja", searchPuja);
+router.get("/getSpecificPuja/:id", getSpecificPuja);
 
 export default router;
